# 7colors

./: .gitignore  7colors-static  AI.c  AI.h  CMakeLists.txt  CONSIGNES  Lists.c  Lists.h  README.md  SOURCES.md  board.c  board.h  display.c  display.h  game.c  game.h  main.c  queue.c  queue.h  rapport.tex  tests.c  utils.c  utils.h
src/: AI.c  AI.h  board.c  board.h  defaults.c  defaults.h  display.c  display.h  game.c  game.h  input.c  input.h  main.c  queue.c  queue.h  server.c  server.h  simple_unit_test.h  strategies.c  strategies.h  structures.c  structures.h  tests.c  utils.c  utils.h
